# ibus-libime

./: .gitignore  CMakeLists.txt  README.md  config.h.in  ibus-libime.spec  setup.sh
data/: libime.xml.in
scripts/: generate-tgz.sh
src/: configs.cpp  configs.h  ibus_engine.cpp  ibus_engine.h  logger.h  main.cpp  pinyin_engine.cpp  pinyin_engine.h
